Adjusted sizes for proper view on mobile

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
           </nav>
       </header>
       <section class = "top-content">
-        <img class = "hero_image" src = "img/jumbo-about.png" alt = "Image of a city skyline" />
+        <img class = "hero_img" src = "img/jumbo-about.png" alt = "Image of a city skyline" />
         <div class = "text-container">
           <h2>About</h2>
 
